--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
+    "start": "electron-forge start",
+	"package": "electron-forge package",
+	"make": "electron-forge make"
   },
   "author": "ebmaj7",
   "license": "Hacking License",
   "devDependencies": {
+    "@electron-forge/cli": "^6.2.1",
     "electron": "^24.1.2"
   },
   "dependencies": {
